- 단일 영화의 상세정보(제목, 개봉연도, 평점, 장르, 감독, 배우, 줄거리, 포스터 등)를 볼 수 있도록 만들어봄 (연동은 아직 구현 못함)

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ form {
   gap: 10px;
   padding: 50px 10px;
 }
+
 .movie {
   --size: 300px;
   width: var(--size);
@@ -18,7 +19,8 @@ form {
   position: relative;
   border-radius: 10px;
 }
-.movie h1 {
+
+.movie h2 {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -29,15 +31,19 @@ form {
   background-color: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(4px);
   color: white;
+  font-size: 24px;
 }
+
 .movie img {
   width: 100%;
 }
+
 .actions {
   display: flex;
   justify-content: center;
   padding-bottom: 50px;
 }
+
 .btn {
   font-size: 40px;
   padding: 20px 40px;
