- 단일 영화의 상세정보(제목, 개봉연도, 평점, 장르, 감독, 배우, 줄거리, 포스터 등)를 볼 수 있도록 구현

--- a/css/main.css
+++ b/css/main.css
@@ -44,11 +44,15 @@ form {
   padding-bottom: 50px;
 }
 
-.btn {
+.btn__more {
   font-size: 40px;
   padding: 20px 40px;
   background-color: orange;
   display: inline-block;
   border-radius: 10px;
   cursor: pointer;
+}
+
+.btn__more.hidden {
+  display: none;
 }
