--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  margin: auto;
+}
+
+.forms.form--none {
+  display: none;
+}
+
 .movies {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 10px;
   padding: 50px 10px;
+}
+.movies.movies--none {
+  display: none;
 }
 .movie {
   --size: 300px;
@@ -25,14 +38,16 @@
   backdrop-filter: blur(4px);
   color: white;
   font-size: 20px;
+  pointer-events: none;
+}
+.movie a {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 .movie img {
   width: 100%;
-}
-.movie img.none {
-  background: url("img/product_empty.png") no-repeat center;
-  width: 100%;
-  height: 100%;
+  pointer-events: none;
 }
 
 .movie p {
@@ -47,11 +62,16 @@
   backdrop-filter: blur(4px);
   color: white;
   font-size: 20px;
+  pointer-events: none;
 }
+
 .actions {
   display: flex;
   justify-content: center;
   padding-bottom: 50px;
+}
+.actions.btn--none {
+  display: none;
 }
 .btn {
   font-size: 40px;
@@ -60,4 +80,14 @@
   display: inline-block;
   border-radius: 10px;
   cursor: pointer;
+}
+
+/* 상세정보 */
+.info {
+  background-color: #e9f0e3;
+  padding: 30px;
+  height: 100vh;
+}
+.info.info--none {
+  display: none;
 }
