--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
   background-color: var(--bs-body-color) !important;
   color: var(--bs-gray-100) !important;
+  min-width: 500px;
 }
 body a {
   color: var(--bs-btn-color);
@@ -11,24 +12,41 @@ body a {
 header {
   padding: 10px 100px;
 }
-header H1 {
-  color: VAR(--bs-gray-100);
+header h1 {
+  color: var(--bs-gray-100);
   padding: 50px 0;
+}
+header h1:hover a {
+  color: var(--bs-gray-100);
+}
+header .btns {
+  gap: 10px;
+  flex-wrap: nowrap;
 }
 header .btns button:hover a {
   color: var(--bs-btn-hover-color);
 }
+
 header .search {
   padding: 60px 0;
-  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   gap: 10px;
 }
 header .search input {
-  width: 700%;
+  width: 50%;
+  flex-grow: 1;
+}
+header .search select {
+  height: 100%;
+  width: 15%;
+  flex-grow: 1;
 }
 header .search button {
-  width: 100%;
+  height: 100%;
+  width: 15%;
+  flex-grow: 1;
 }
 
 /* movies */
@@ -41,7 +59,7 @@ header .search button {
 }
 .movies-list .text {
   margin: auto;
-  font-size: 30px;
+  font-size: 150%;
 }
 .movies-list .movies {
   display: flex;
@@ -104,22 +122,24 @@ header .search button {
   position: relative;
 }
 .movie-detail .detail-loading {
-  /* text-align: center; */
   position: absolute;
   left: calc(50% - 2.5rem);
   top: calc(50% - 2.5rem);
 }
 .movie-detail .row {
   align-items: center;
-  padding-right: 50px;
+  justify-content: center;
+  gap: 30px;
 }
-
 .movie-detail .poster {
   --size: 400px;
   width: var(--size);
   height: calc(var(--size) * 3 / 2);
   margin: auto;
   display: block;
+}
+.movie-detail .detail-info {
+  padding: 0 50px;
 }
 .movie-detail .detail-info .title-info {
   font-weight: 600;
@@ -129,7 +149,7 @@ header .search button {
   font-size: 100px;
 }
 .movie-detail .detail-info .info {
-  color: midnightblue;
+  color: grey;
 }
 .movie-detail .detail-info .ratings {
   display: flex;
@@ -144,7 +164,6 @@ header .search button {
 .movie-detail .detail-info .ratings span {
   margin: 0 10px;
 }
-
 .skeletons .skeleton_poster {
   --size: 400px;
   width: var(--size);
