--- a/css/main.css
+++ b/css/main.css
@@ -58,17 +58,19 @@ button {
 
 .inner {
   max-width: 1200px;
+  padding: 10px 20px 0 20px;
   margin: 0 auto;
   position: relative;
 }
 
 /* header */
 header {
+  padding-top: 30px;
   width: 100%;
 }
 
 header .inner {
-  padding: 20px 0;
+  padding: 20px;
   display: flex;
   align-items: center;
 }
@@ -92,6 +94,10 @@ header .menu li {
   height: 100%;
 }
 
+header .menu li:first-child {
+  background-color: var(--color-green);
+}
+
 header .menu li:hover {
   filter: brightness(50%);
 }
@@ -100,6 +106,10 @@ header .menu li a {
   font-size: 20px;
   font-weight: 600;
   color: var(--color-green);
+}
+
+header .menu li:first-child a {
+  color: var(--color-dark-gray);
 }
 
 /* form */
@@ -167,13 +177,16 @@ header .menu li a {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
-  padding: 12px;
-  max-width: 1200px;
+  gap: 5px;
+  padding: 200px 15px;
   height: 100%;
   margin: 30px auto;
   border-radius: 10px;
   box-shadow: inset 0 0 15px #000;
+}
+
+.movies.search {
+  padding: 15px;
 }
 
 .movies .no-result {
@@ -278,4 +291,27 @@ header .menu li a {
 
 .hidden {
   display: none;
+}
+
+/* footer */
+footer {
+  padding: 40px 0;
+  border: 3px solid red;
+}
+
+footer a {
+  display: block;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 4px;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+footer a span {
+  color: var(--color-green);
+}
+
+footer a span > span {
+  color: var(--color-dark-gray);
 }
