--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ header .menu li:first-child a {
   justify-content: center;
   gap: 5px;
   padding: 200px 15px;
-  height: 100%;
+  min-height: 450px;
   margin: 30px auto;
   border-radius: 10px;
   box-shadow: inset 0 0 15px #000;
